--- a/sites/mainframe50/css/ww_cci.css
+++ b/sites/mainframe50/css/ww_cci.css
@@ -106,7 +106,10 @@ sites/
   line-height: 21.6px;
   line-height: 2.16rem; }
 
-#ibm-content p.ibm-last {
+#ibm-content p {
+  padding-bottom: 10px; }
+
+#ibm-content p .ibm-last{
   padding-bottom: 30px; }
 
 #ibm-content p.ibm_cci-intro {
